PyMaker/datas/object2/RawHTML/i7701/Python_DOC_referPages.why-cant-list-unpacking-be-used-for-indexing-a-second-list.txt
<div class="post-text" itemprop="text">
<p>… e.g. <code>a[*b]</code> where <code>a</code> and <code>b</code> are both lists and <code>len(b) == 1</code></p>
<p>Using the simple example below:</p>
<pre><code>a = [1,2,3,4]
b = [0]

a[*b]
</code></pre>
<p>Why does running the above raise an exception?</p>
<pre><code>    a[*b]
      ^
SyntaxError: invalid syntax
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>Because that syntax is invalid.</p>
<p>Iterable unpacking is allowed in various circumstances – for example:</p>
<ul>
<li><a href="https://docs.python.org/3/tutorial/controlflow.html#unpacking-argument-lists" rel="nofollow noreferrer">Unpacking Argument Lists</a></li>
<li><a href="https://www.python.org/dev/peps/pep-3132/" rel="nofollow noreferrer">Assignment</a></li>
<li><a href="https://www.python.org/dev/peps/pep-0448/" rel="nofollow noreferrer">Comprehensions</a></li>
</ul>
<p>… but not universally, and definitely not for indexing. In fact, it's unclear what your proposed syntax even means. Consider: what would <code>a[*b]</code> return if <code>b</code> were <code>[1, 2]</code>?</p>
</div>
